메인페이지 수정

--- a/law-detail.html
+++ b/law-detail.html
@@ -72,6 +72,7 @@
               <li><button type="button" class="krds-btn small text">도움말</button></li>
               <li><button type="button" class="krds-btn small text">고객센터</button></li>
             </ul>
+
           </div>
           <div class="gnb-login">
             <button type="button" class="krds-btn medium text">
@@ -218,7 +219,7 @@
     <!-- ============================================ -->
     <div class="lsw-sub-header">
       <div class="inner">
-        <button type="button" class="krds-btn icon small lsw-btn-back" aria-label="뒤로가기">
+        <button type="button" onclick="location.href='index.html'" class="krds-btn icon small lsw-btn-back" aria-label="뒤로가기">
           <i class="svg-icon ico-angle left"></i>
         </button>
         <h2 class="lsw-sub-title">인공지능 발전과 신뢰 기반 조성 등에 관한 기본법</h2>
