메인페이지 수정

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
             <li>
               <a href="#" class="lsw-intro-circle-item lsw-intro-cate-all">
                 <span class="lsw-intro-circle-icon">
-                  <img src="image/intro-cate-all.jpg" alt="" aria-hidden="true">
+                  <img src="image/intro-cate-all.png" alt="" aria-hidden="true">
                 </span>
                 <span class="lsw-intro-circle-label">전체보기</span>
               </a>
@@ -585,7 +585,7 @@
             <li>
               <a href="law-detail.html" class="lsw-intro-circle-item">
                 <span class="lsw-intro-circle-icon">
-                  <img src="image/intro-cate-law.jpg" alt="" aria-hidden="true">
+                  <img src="image/intro-cate-law.png" alt="" aria-hidden="true">
                 </span>
                 <span class="lsw-intro-circle-label">법령</span>
               </a>
@@ -593,7 +593,7 @@
             <li>
               <a href="#" class="lsw-intro-circle-item">
                 <span class="lsw-intro-circle-icon">
-                  <img src="image/intro-cate-rule.jpg" alt="" aria-hidden="true">
+                  <img src="image/intro-cate-rule.png" alt="" aria-hidden="true">
                 </span>
                 <span class="lsw-intro-circle-label">행정규칙</span>
               </a>
@@ -601,7 +601,7 @@
             <li>
               <a href="#" class="lsw-intro-circle-item">
                 <span class="lsw-intro-circle-icon">
-                  <img src="image/intro-cate-table.jpg" alt="" aria-hidden="true">
+                  <img src="image/intro-cate-table.png" alt="" aria-hidden="true">
                 </span>
                 <span class="lsw-intro-circle-label">별표</span>
               </a>
@@ -609,7 +609,7 @@
             <li>
               <a href="#" class="lsw-intro-circle-item">
                 <span class="lsw-intro-circle-icon">
-                  <img src="image/intro-cate-local.jpg" alt="" aria-hidden="true">
+                  <img src="image/intro-cate-local.png" alt="" aria-hidden="true">
                 </span>
                 <span class="lsw-intro-circle-label">자치법규</span>
               </a>
@@ -617,15 +617,15 @@
             <li>
               <a href="#" class="lsw-intro-circle-item">
                 <span class="lsw-intro-circle-icon">
-                  <img src="image/intro-cate-interpret.jpg" alt="" aria-hidden="true">
+                  <img src="image/intro-cate-interpret.png" alt="" aria-hidden="true">
                 </span>
-                <span class="lsw-intro-circle-label">해석례</span>
+                <span class="lsw-intro-circle-label">판례·해석례</span>
               </a>
             </li>
             <li>
               <a href="#" class="lsw-intro-circle-item">
                 <span class="lsw-intro-circle-icon">
-                  <img src="image/intro-cate-public.jpg" alt="" aria-hidden="true">
+                  <img src="image/intro-cate-public.png" alt="" aria-hidden="true">
                 </span>
                 <span class="lsw-intro-circle-label">공공기관</span>
               </a>
